thinkq-frontend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: thinkq-frontend
  namespace: thinkq
spec:
  selector:
    app: thinkq-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
